--- a/.github/workflows/ci_updater.yml
+++ b/.github/workflows/ci_updater.yml
@@ -76,11 +76,11 @@ jobs:
           set -euo pipefail
           if [ ! -f "$ANSWERS_FILE" ]; then
             echo "No $ANSWERS_FILE found; skipping Copier update."
-            echo "ran=false" >> "$GITHUB_OUTPUT"
+            echo "ran=false" | tee -a "$GITHUB_OUTPUT"
             exit 0
           fi
 
-          echo "ran=true" >> "$GITHUB_OUTPUT"
+          echo "ran=true" | tee -a "$GITHUB_OUTPUT"
           copier update --trust -a "$ANSWERS_FILE" -A --vcs-ref HEAD --defaults
 
       - name: Create or update PR
