--- a/.github/workflows/jekyll_site.yml
+++ b/.github/workflows/jekyll_site.yml
@@ -52,8 +52,8 @@ jobs:
       - name: Default outputs
         id: defaults
         run: |
-          echo "host=${{ github.repository_owner }}.github.io" >> "$GITHUB_OUTPUT"
-          echo "base_path=/${{ github.event.repository.name }}" >> "$GITHUB_OUTPUT"
+          echo "host=${{ github.repository_owner }}.github.io" | tee -a "$GITHUB_OUTPUT"
+          echo "base_path=/${{ github.event.repository.name }}" | tee -a "$GITHUB_OUTPUT"
 
       - name: Setup Pages
         id: pages
