--- a/.github/workflows/ci_updater.yml
+++ b/.github/workflows/ci_updater.yml
@@ -46,6 +46,7 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  # Required in this environment to allow PRs that modify .github/workflows/*.
   actions: write
 
 jobs:
