--- a/actions/htmlproofer/action.yml
+++ b/actions/htmlproofer/action.yml
@@ -62,6 +62,12 @@ runs:
           echo "EOF"
         } | tee -a "$GITHUB_OUTPUT"
 
+    - name: Cache HTMLProofer
+      uses: actions/cache@v5
+      with:
+        path: tmp/.htmlproofer
+        key: ${{ runner.os }}-htmlproofer
+
     - name: Test with htmlproofer
       uses: athackst/htmlproofer-action@main
       with:
